--- a/app/globals.css
+++ b/app/globals.css
@@ -76,3 +76,28 @@
   }
 }
 
+@layer base {
+  html, body, #__next {
+    @apply h-full w-full;
+  }
+
+  body {
+    @apply flex flex-col;
+  }
+}
+
+/* globals.css */
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1; /* Этот стиль позволяет main растягиваться на оставшееся пространство */
+}
+
+footer {
+  margin-top: auto; /* Это гарантирует, что футер будет прижат к низу */
+}
